[package]
name = "prometheus-analytical"
version = "0.1.0"
edition = "2021"

[dependencies]

arrow = { version = "52.2.0", features = [
    "prettyprint",
] }
datafusion = { version = "42.0.0", default-features = true, features = ["avro"] }
datafusion-common = { version = "42.0.0", default-features = true }
datafusion-expr = { version = "42.0.0" }
datafusion-optimizer = { version = "42.0.0", default-features = true }
datafusion-physical-expr = { version = "42.0.0", default-features = true }
datafusion-proto = { version = "42.0.0" }
datafusion-sql = { version = "42.0.0" }

prometheus-http-query = "0.8.3"

tokio = { version = "1.0", features = ["rt-multi-thread", "time"] }
async-trait = "0.1.83"

futures = "0.3"

